Fixes compiler on MacOS